postgres_manager/tests/snapshots/renderer_tests__centered_rect_40_30.snap
---
source: tests/renderer_tests.rs
expression: rect3
---
Rect {
    x: 30,
    y: 18,
    width: 40,
    height: 30,
}
