postgres_manager/tests/snapshots/renderer_tests__centered_rect_60_10.snap
---
source: tests/renderer_tests.rs
expression: rect1
---
Rect {
    x: 20,
    y: 18,
    width: 60,
    height: 10,
}
