postgres_manager/tests/snapshots/renderer_tests__centered_rect_80_20.snap
---
source: tests/renderer_tests.rs
expression: rect2
---
Rect {
    x: 10,
    y: 20,
    width: 80,
    height: 20,
}
