postgres_manager/tests/snapshots/renderer_tests__pg_settings_chunks.snap
---
source: tests/renderer_tests.rs
expression: pg_settings_chunks
---
[
    Rect {
        x: 1,
        y: 13,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 14,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 15,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 16,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 17,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 18,
        width: 98,
        height: 1,
    },
]
