postgres_manager/tests/snapshots/renderer_tests__s3_settings_chunks.snap
---
source: tests/renderer_tests.rs
expression: s3_settings_chunks
---
[
    Rect {
        x: 1,
        y: 4,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 5,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 6,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 7,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 8,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 9,
        width: 98,
        height: 1,
    },
    Rect {
        x: 1,
        y: 10,
        width: 98,
        height: 1,
    },
]
